// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`align align right 1`] = `
"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
                                                                             et dolore magna aliqua.
                            Dictumst quisque sagittis purus sit amet volutpat consequat mauris nunc.
                                          Nunc sed augue lacus viverra vitae congue eu consequat ac.
                                                       Sit amet porttitor eget dolor morbi non arcu."
`;

exports[`auto event split - many 1`] = `
"Lorem ipsum dolor siLorem ipsum dolor siLorem ipsum dolor siLorem ipsum dolor siLorem ipsum dolor si
t amet.             t amet.             t amet.             t amet.             t amet.             
Lorem ipsum dolor siLorem ipsum dolor siLorem ipsum dolor siLorem ipsum dolor siLorem ipsum dolor si
t amet.             t amet.             t amet.             t amet.             t amet.             
Lorem ipsum dolor sit amet.                       Lorem ipsum dolor sit amet.                       "
`;

exports[`auto event split 1`] = `"Lorem ipsum dolor sit amet.      Lorem ipsum dolor sit amet.      Lorem ipsum dolor sit amet.       "`;

exports[`auto mutli-row 1`] = `
"Lorem ipsum dolor sit amet.      Lorem ipsum dolor sit amet, conseLorem ipsum dolor sit amet, consec
                                 ctetur adipiscing elit, sed do eitetur adipiscing elit, sed do eius
                                 usmod tempor incididunt ut laboremod tempor incididunt ut labore et
                                  et dolore magna aliqua.          dolore magna aliqua.             
                                 Dictumst quisque sagittis purus sDictumst quisque sagittis purus si
                                 it amet volutpat consequat maurist amet volutpat consequat mauris n
                                  nunc.                           unc.                              
                                 Nunc sed augue lacus viverra vitaNunc sed augue lacus viverra vitae
                                 e congue eu consequat ac.         congue eu consequat ac.          
                                 Sit amet porttitor eget dolor morSit amet porttitor eget dolor morb
                                 bi non arcu.                     i non arcu.                       
Lorem ipsum dolor sit amet, conseLorem ipsum dolor sit amet, conseLorem ipsum dolor sit amet.       
ctetur adipiscing elit, sed do eictetur adipiscing elit, sed do ei                                  
usmod tempor incididunt ut laboreusmod tempor incididunt ut labore                                  
 et dolore magna aliqua.          et dolore magna aliqua.                                           "
`;

exports[`breakpoints stdout: 25 - Too small 1`] = `
"Lorem ipsum dolor sit ame
t, consectetur adipiscing
 elit, sed do eiusmod tem
por incididunt ut labore 
et dolore magna aliqua.  
Lorem ipsum dolor sit ame
t, consectetur adipiscing
 elit, sed do eiusmod tem
por incididunt ut labore 
et dolore magna aliqua.  
Lorem ipsum dolor sit ame
t, consectetur adipiscing
 elit, sed do eiusmod tem
por incididunt ut labore 
et dolore magna aliqua.  
Lorem ipsum dolor sit ame
t, consectetur adipiscing
 elit, sed do eiusmod tem
por incididunt ut labore 
et dolore magna aliqua.  "
`;

exports[`breakpoints stdout: 90 - Normal 1`] = `
"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
ut labore et dolore magna aliqua.                                                         
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
ut labore et dolore magna aliqua.                                                         
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
ut labore et dolore magna aliqua.                                                         
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
ut labore et dolore magna aliqua.                                                         "
`;

exports[`breakpoints stdout: 150 - Very big 1`] = `
"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet,
                                                                                                                            consectetur adipiscing eli
                                                                                                                           t, sed do eiusmod tempor in
                                                                                                                           cididunt ut labore et dolor
                                                                                                                           e magna aliqua.            
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet,
                                                                                                                            consectetur adipiscing eli
                                                                                                                           t, sed do eiusmod tempor in
                                                                                                                           cididunt ut labore et dolor
                                                                                                                           e magna aliqua.            "
`;

exports[`content-width content-width with fixed width 1`] = `
"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
et dolore magna aliqua.                                                                             
Lorem ipsum dolor sit amet, consectetur 
adipiscing elit, sed do eiusmod tempor i
ncididunt ut labore et dolore magna aliq
ua.                                     
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
et dolore magna aliqua.                                                                             
Lorem ipsum dolor sit amet.             "
`;

exports[`content-width content-width with overflowing 1`] = `
"  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labo 
  re et dolore magna aliqua.                                                                        
  Dictumst quisque sagittis purus sit amet volutpat consequat mauris nunc.                          
  Nunc sed augue lacus viverra vitae congue eu consequat ac.                                        
  Sit amet porttitor eget dolor morbi non arcu.                                                     
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labo  
 re et dolore magna aliqua.                                                                         
 Dictumst quisque sagittis purus sit amet volutpat consequat mauris nunc.                           
 Nunc sed augue lacus viverra vitae congue eu consequat ac.                                         
 Sit amet porttitor eget dolor morbi non arcu.                                                      
                                                                                                    
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
et dolore magna aliqua.                                                                             
Dictumst quisque sagittis purus sit amet volutpat consequat mauris nunc.                            
Nunc sed augue lacus viverra vitae congue eu consequat ac.                                          
Sit amet porttitor eget dolor morbi non arcu.                                                       
                                                                                                    "
`;

exports[`content-width content-width with padding 1`] = `
"  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labo 
  re et dolore magna aliqua.                                                                        
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labo  
 re et dolore magna aliqua.                                                                         "
`;

exports[`custom breakpoints function stdout: 25 - Too small 1`] = `
"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
`;

exports[`custom breakpoints function stdout: 90 - Normal 1`] = `
"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
ut labore et dolore magna aliqua.                                                         
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
ut labore et dolore magna aliqua.                                                         
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
ut labore et dolore magna aliqua.                                                         
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
ut labore et dolore magna aliqua.                                                         "
`;

exports[`custom breakpoints function stdout: 150 - Very big 1`] = `
"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet,
                                                                                                                            consectetur adipiscing eli
                                                                                                                           t, sed do eiusmod tempor in
                                                                                                                           cididunt ut labore et dolor
                                                                                                                           e magna aliqua.            
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet,
                                                                                                                            consectetur adipiscing eli
                                                                                                                           t, sed do eiusmod tempor in
                                                                                                                           cididunt ut labore et dolor
                                                                                                                           e magna aliqua.            "
`;

exports[`edge cases colored text 1`] = `
"[34mAA[39m                                                                                                  
B                               [1mBBB[22m                                                                 
C                               C                                [4mCCCC[24m                               "
`;

exports[`edge cases colored text wrapping preserves colors 1`] = `
"[34mBLUEBLUEBL[31mREDREDREDR[32mGREENGREEN
[34mUEBLUEBLUE[31mEDREDREDRE[32mGREENGREEN
[34mBLUEBLUEBL[31mDREDREDRED[32mGREENGREEN
[34mUEBLUEBLUE[39m[31mREDREDREDR[32mGREENGREEN
          [31mEDRED[39m     [32mGREENGREEN
                    [32mGREENGREEN[39m"
`;

exports[`edge cases inconsistent rows 1`] = `
"A                                                                                                   
B                                B                                                                  
C                                C                                C                                 "
`;

exports[`edge cases infinite width 1`] = `
"AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC"
`;

exports[`padding overflowing content with overflowing padding reduction - even 1`] = `
"                                                 L                                                  
                                                 o                                                  
                                                 r                                                  
                                                 e                                                  
                                                 m                                                  
                                                                                                    
                                                 i                                                  
                                                 p                                                  
                                                 s                                                  
                                                 u                                                  
                                                 m                                                  
                                                                                                    
                                                 d                                                  
                                                 o                                                  
                                                 l                                                  
                                                 o                                                  
                                                 r                                                  
                                                                                                    
                                                 s                                                  
                                                 i                                                  
                                                 t                                                  
                                                                                                    
                                                 a                                                  
                                                 m                                                  
                                                 e                                                  
                                                 t                                                  
                                                 ,                                                  
                                                                                                    
                                                 c                                                  
                                                 o                                                  
                                                 n                                                  
                                                 s                                                  
                                                 e                                                  
                                                 c                                                  
                                                 t                                                  
                                                 e                                                  
                                                 t                                                  
                                                 u                                                  
                                                 r                                                  
                                                                                                    
                                                 a                                                  
                                                 d                                                  
                                                 i                                                  
                                                 p                                                  
                                                 i                                                  
                                                 s                                                  
                                                 c                                                  
                                                 i                                                  
                                                 n                                                  
                                                 g                                                  
                                                                                                    
                                                 e                                                  
                                                 l                                                  
                                                 i                                                  
                                                 t                                                  
                                                 ,                                                  
                                                                                                    
                                                 s                                                  
                                                 e                                                  
                                                 d                                                  
                                                                                                    
                                                 d                                                  
                                                 o                                                  
                                                                                                    
                                                 e                                                  
                                                 i                                                  
                                                 u                                                  
                                                 s                                                  
                                                 m                                                  
                                                 o                                                  
                                                 d                                                  
                                                                                                    
                                                 t                                                  
                                                 e                                                  
                                                 m                                                  
                                                 p                                                  
                                                 o                                                  
                                                 r                                                  
                                                                                                    
                                                 i                                                  
                                                 n                                                  
                                                 c                                                  
                                                 i                                                  
                                                 d                                                  
                                                 i                                                  
                                                 d                                                  
                                                 u                                                  
                                                 n                                                  
                                                 t                                                  
                                                                                                    
                                                 u                                                  
                                                 t                                                  
                                                                                                    
                                                 l                                                  
                                                 a                                                  
                                                 b                                                  
                                                 o                                                  
                                                 r                                                  
                                                 e                                                  
                                                                                                    
                                                 e                                                  
                                                 t                                                  
                                                                                                    
                                                 d                                                  
                                                 o                                                  
                                                 l                                                  
                                                 o                                                  
                                                 r                                                  
                                                 e                                                  
                                                                                                    
                                                 m                                                  
                                                 a                                                  
                                                 g                                                  
                                                 n                                                  
                                                 a                                                  
                                                                                                    
                                                 a                                                  
                                                 l                                                  
                                                 i                                                  
                                                 q                                                  
                                                 u                                                  
                                                 a                                                  
                                                 .                                                  "
`;

exports[`padding overflowing padding reduction - even 1`] = `
"                                                 L                                                  
                                                 o                                                  
                                                 r                                                  
                                                 e                                                  
                                                 m                                                  
                                                                                                    
                                                 i                                                  
                                                 p                                                  
                                                 s                                                  
                                                 u                                                  
                                                 m                                                  
                                                                                                    
                                                 d                                                  
                                                 o                                                  
                                                 l                                                  
                                                 o                                                  
                                                 r                                                  
                                                                                                    
                                                 s                                                  
                                                 i                                                  
                                                 t                                                  
                                                                                                    
                                                 a                                                  
                                                 m                                                  
                                                 e                                                  
                                                 t                                                  
                                                 .                                                  "
`;

exports[`padding overflowing padding reduction - uneven 1`] = `
"                                                                  L                                 
                                                                  o                                 
                                                                  r                                 
                                                                  e                                 
                                                                  m                                 
                                                                                                    
                                                                  i                                 
                                                                  p                                 
                                                                  s                                 
                                                                  u                                 
                                                                  m                                 
                                                                                                    
                                                                  d                                 
                                                                  o                                 
                                                                  l                                 
                                                                  o                                 
                                                                  r                                 
                                                                                                    
                                                                  s                                 
                                                                  i                                 
                                                                  t                                 
                                                                                                    
                                                                  a                                 
                                                                  m                                 
                                                                  e                                 
                                                                  t                                 
                                                                  .                                 "
`;

exports[`percent widths 50% 50% 1`] = `
"Lorem ipsum dolor sit amet, consectetur adipiscingLorem ipsum dolor sit amet, consectetur adipiscing
 elit, sed do eiusmod tempor incididunt ut labore  elit, sed do eiusmod tempor incididunt ut labore 
et dolore magna aliqua.                           et dolore magna aliqua.                           "
`;

exports[`percent widths 50% 50% with padding 1`] = `
"      Lorem ipsum dolor sit amet, consectetur        Lorem ipsum dolor sit amet, consectetu         
      adipiscing elit, sed do eiusmod tempor i       r adipiscing elit, sed do eiusmod temp         
      ncididunt ut labore et dolore magna aliq       or incididunt ut labore et dolore magn         
      ua.                                            a aliqua.                                      "
`;

exports[`percent widths 70% 30% with different content lengths 1`] = `
"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmoLorem ipsum dolor sit amet, co
d tempor incididunt ut labore et dolore magna aliqua.                 nsectetur adipiscing elit, sed
                                                                       do eiusmod tempor incididunt 
                                                                      ut labore et dolore magna aliq
                                                                      ua.                           
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmoLorem ipsum dolor sit amet.   
d tempor incididunt ut labore et dolore magna aliqua.                                               "
`;

exports[`percent widths 100% 100% with padding 1`] = `
"                                                                                                    
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut lab  
  ore et dolore magna aliqua.                                                                       
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut    
     labore et dolore magna aliqua.                                                                 
                                                                                                    "
`;

exports[`process postprocess 1`] = `
"LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING ELIT, SED DO EIUSMOD TEMPOR INCIDIDUNT UT LABORE 
et dolore magna aliqua.                                                                             
DICTUMST QUISQUE SAGITTIS PURUS SIT AMET VOLUTPAT CONSEQUAT MAURIS NUNC.                            
nunc sed augue lacus viverra vitae congue eu consequat ac.                                          
SIT AMET PORTTITOR EGET DOLOR MORBI NON ARCU.                                                       "
`;

exports[`process postprocess ignores vertical padding 1`] = `
"                                                  Lorem ipsum dolor sit amet, consectetur adipiscing
postprocessed                                      elit, sed do eiusmod tempor incididunt ut labore 
postprocessed                                     et dolore magna aliqua.                           
postprocessed                                     Dictumst quisque sagittis purus sit amet volutpat 
postprocessed                                     consequat mauris nunc.                            
postprocessed                                     Nunc sed augue lacus viverra vitae congue eu conse
postprocessed                                     quat ac.                                          
postprocessed                                     Sit amet porttitor eget dolor morbi non arcu.     
postprocessed                                                                                       
                                                                                                    
                                                                                                    
                                                                                                    "
`;

exports[`process preprocess 1`] = `
"LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING ELIT, SED DO EIUSMOD TEMPOR INCIDIDUNT UT LABORE 
ET DOLORE MAGNA ALIQUA.                                                                             
DICTUMST QUISQUE SAGITTIS PURUS SIT AMET VOLUTPAT CONSEQUAT MAURIS NUNC.                            
NUNC SED AUGUE LACUS VIVERRA VITAE CONGUE EU CONSEQUAT AC.                                          
SIT AMET PORTTITOR EGET DOLOR MORBI NON ARCU.                                                       "
`;

exports[`static widths fixed width 1`] = `
"Lorem ipsuLorem ipsum dolor si
m dolor sit amet, consectetur 
t amet.   adipiscing elit, sed
           do eiusmod tempor i
          ncididunt ut labore 
          et dolore magna aliq
          ua.                 "
`;

exports[`static widths overflowing rows 1`] = `
"Lorem ipsu
m dolor si
t amet.   
Lorem ipsum dolor sit amet.                                                                         
Lorem ipsu
m dolor si
t amet.   
Lorem ipsum dolor sit amet.                                                                         "
`;

exports[`static widths overflowing width 1`] = `
"Lorem ipsum dolor sit amet.                                                                         
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
et dolore magna aliqua.                                                                             "
`;

exports[`static widths overflowing width with padding 1`] = `
"      Lorem ipsum dolor sit amet.                                                                   
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt u      
   t labore et dolore magna aliqua.                                                                 "
`;
